@@ -1,3 +1,9 @@
+2019-10-23  qing zhao  <qing.zhao@oracle.com>
+
+	PR gcov-profile/91971
+	* coverage.c (coverage_init): Mangle the full path of filename when
+	filename is a absolute path.
+
 2019-10-23  Jozef Lawrynowicz  <jozef.l@mittosystems.com>
 
 	* config/msp430/msp430-protos.h (msp430_has_hwmult): New.
